# rsync-time-machine.py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  rsync-time-machine.py  rsync_time_machine.py  time-machine.py  zensical.toml
.github/: release.py
.github/workflows/: automerge.yml  docs.yml  pytest.yml  release-drafter.yml  release.yml  toc.yaml  update-readme.yml
docs/: CNAME  backup-strategy.md  contributing.md  generate.py  getting-started.md  index.md  usage.md
docs/overrides/partials/integrations/analytics/: custom.html
tests/: test_app.py  test_diff_coverage.py
